Removed MaxPermSize option as it is no longer supported by Java 8